<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.LoginActivity">
    <TextView
        android:id="@+id/login_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_name"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        />
    <EditText
        android:id="@+id/login_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/login_your_name"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/full_name"
        android:paddingLeft="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/login_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourPassword"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/login_edit_text_email"
        />
    <EditText
        android:id="@+id/login_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/login_your_password"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Password"
        android:paddingLeft="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_edit_text_password"
        android:text="@string/Login"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        />
    <TextView
        android:id="@+id/login_text_register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_login"
        android:textSize="@dimen/_14sdp"
        android:textColor="#26b3a5"
        android:text="@string/Register_here"
        android:layout_marginTop="@dimen/_27sdp"
        android:textStyle="normal"
        android:layout_marginLeft="@dimen/_13sdp"
        />
    <TextView
        android:id="@+id/login_or_login_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_text_register_here"
        android:text="@string/or_login_by"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_27sdp"
        />
    <Button
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:background="@drawable/button_facebook"
        android:text="@string/Facebook"
        android:layout_below="@+id/login_or_login_by"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:layout_alignParentLeft="true"
        />
    <Button
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:background="@drawable/button_google_plus"
        android:text="@string/Google"
        android:layout_below="@+id/login_or_login_by"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_13sdp"
        />

</RelativeLayout>