<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group77"
    tools:context=".activity.GettingStartedActivity">
    <TextView
        android:id="@+id/getting_started_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/Oqaaz"
        android:textSize="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_155sdp"
        android:layout_marginLeft="@dimen/_95sdp"
        />
    <TextView
        android:id="@+id/getting_started_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/The_simpler_way_to_search_for"
        android:textSize="@dimen/_20sdp"
        android:textColor="#fff"
        android:layout_below="@+id/getting_started_name"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/getting_started_remaining_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getting_started_description"
        android:textSize="@dimen/_20sdp"
        android:textColor="#fff"
        android:text="@string/your_need"
        android:layout_centerInParent="true"
        />
    <Button
        android:id="@+id/getting_started_btn_start"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/getting_started_remaining_description"
        android:text="@string/GettingStarted"
        android:textColor="#fff"
        android:textStyle="normal"
        />
    <TextView
        android:id="@+id/getting_started_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getting_started_btn_start"
        android:textSize="@dimen/_17sdp"
        android:textColor="#fff"
        android:text="@string/Already_have_account"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerInParent="true" />
    <TextView
        android:id="@+id/getting_started_login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getting_started_already_have_account"
        android:textSize="@dimen/_17sdp"
        android:textColor="#5ecfc0"
        android:text="@string/Login_here"
        android:layout_centerInParent="true"
        />

</RelativeLayout>