<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/register_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_name"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        />
    <EditText
        android:id="@+id/register_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/register_your_name"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/full_name"
        android:paddingLeft="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/register_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourEmail"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/register_edit_text_name"
        />
    <EditText
        android:id="@+id/register_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/register_your_email"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Email"
        android:paddingLeft="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/register_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourPassword"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/register_edit_text_email"
        />
    <EditText
        android:id="@+id/register_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/register_your_password"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Password"
        android:paddingLeft="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/register_edit_text_password"
        android:text="@string/Register"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        />
    <TextView
        android:id="@+id/register_text_login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn_register"
        android:textSize="@dimen/_14sdp"
        android:textColor="#26b3a5"
        android:text="@string/Have_an_account_login_here"
        android:layout_marginTop="@dimen/_27sdp"
        android:textStyle="normal"
        android:layout_centerInParent="true"
        />

</RelativeLayout>