<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OrderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">
        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            app:titleTextColor="#fff"
            android:background="#4ed8b9"
            ></android.support.v7.widget.Toolbar>
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/order_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_name"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/order_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/order_your_name"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/full_name"
        android:paddingLeft="@dimen/_10sdp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/order_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourEmail"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/order_edit_text_name"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/order_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/order_your_email"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Email"
        android:paddingLeft="@dimen/_10sdp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/order_your_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourPhone"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/order_edit_text_email"
        />
    <EditText
        android:id="@+id/order_edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/order_your_phone"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Phone"
        android:paddingLeft="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/order_your_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourAddress"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/order_edit_text_phone"
        />
    <EditText
        android:id="@+id/order_edit_text_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/order_your_address"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Address"
        android:paddingLeft="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/order_your_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourNote"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@+id/order_edit_text_address"
        />
    <EditText
        android:id="@+id/order_edit_text_your_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/order_your_note"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Note"
        android:paddingLeft="@dimen/_10sdp"
        />
        <Button
            android:id="@+id/order_btn_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/button"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_13sdp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/order_edit_text_your_note"
            android:text="@string/Order"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            />
    </RelativeLayout>
</ScrollView>